mobile view for otp, xss check

--- a/web-assets/static-pages/otp.html
+++ b/web-assets/static-pages/otp.html
@@ -36,9 +36,9 @@
             <img class="topcoder-logo" src="./images/topcoderlogo-black.png">
             <div class="header-text">Topcoder login</div>
           </div>
-          <div class="info">Please check the email you used to register your
-            Topcoder account for an email with a <span class="black">6 digit code</span>.
-            Enter the code below to login</div>
+          <div class="info">Please check the email you used to register your<br>
+            Topcoder account for an email <br class="info-mobile">with a <span class="black">6 digit code</span>.<br>
+            <br class="info-mobile">Enter the code below to login</div>
           <div class="messages">
             <div class="message-wrapper">
               <div role="alert" class="message error">
